fix: harden indexing and triage execution boundaries
Scope exact lookups by project, retry failed index files, share triage policy across entry points, and recover interrupted background tasks without replaying side effects.

Add Harness context and regression coverage. Validate the staged snapshot independently of existing UI and MCP refactors.